# eHT-PCR

./: .gitignore  LICENSE  README.ko.md  README.md  environment.yml  pyproject.toml
config/: example.yaml
docs/: legacy_bwa_semantics.md
examples/: mini.fa
src/ehtpcr/: __init__.py  cache.py  cli.py  config.py  design.py  logging.py  pipeline.py  records.py  report.py  sequtils.py  thermo.py
src/ehtpcr/io/: __init__.py  fasta.py  gff.py
src/ehtpcr/specificity/: __init__.py  base.py  bwa_aln.py  params.py
